--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="form-group">
             <label for="contract-address">合约地址:</label>
-            <input type="text" id="contract-address" value="0x6985884C4392D348587B19cb9eAAf157F13271cd">
+            <input type="text" id="contract-address" placeholder="0x...">
         </div>
 
         <div class="form-group">
